[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "pytree"
version = "0.1.0"
description = "Python bindings for the PTree library"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "PyTree contributors"}
]
dependencies = ["numpy"]

[tool.scikit-build]
cmake.minimum-version = "3.18"
build-dir = "build"

[tool.pytest.ini_options]
testpaths = ["tests"]
